@@ -1,3 +1,8 @@
+2005-10-20  Marcus Brinkmann  <marcus@g10code.de>
+
+	* src/gpg4win.mk.in (stamps/stamp-final): New target that replaces
+	phony target final.
+
 2005-10-20  Werner Koch  <wk@g10code.com>
 
 	* src/*.nsi: Add a Latin-1 tag to make sure that Emacs uses the
